--- a/views/lead-qualification.ejs
+++ b/views/lead-qualification.ejs
@@ -7,9 +7,9 @@
         <div class="text-center sm:text-left col-span-3 my-auto mb-3 sm:mb-0">
           <h2 class="text-2xl font-medium lg:text-3xl lg:font-semibold">Lead Qualification</h2>
         </div>
-        <div class="text-center sm:text-right my-auto" >
+        <div class="text-center sm:text-right my-auto">
 
-          <button  class="addbtnstyle" id="downloadBtn">Download CSV</button>
+          <button class="addbtnstyle" id="downloadBtn">Download CSV</button>
         </div>
       </div>
 
@@ -49,10 +49,11 @@
                   </td>
                   <td>
                     <a class="p-2 cursor-pointer"
-                      onclick="editapplicationmodel({systemSize:'<%-data.systemSize%>',type:'<%- data.type %>',id:'<%- data.id %>',city:'<%- data.city%>',state:'<%- data.pinCode %>',pageType:'<%- data.pageType %>',name:'<%- data.name%>',phoneNumber:'<%- data.phoneNumber%>',notes:'<%- btoa(data.notes)%>',svStatus:'<%- data.svStatus%>',pStatus:'<%- data.pStatus%>',partnerState:'<%- data.partnerState%>',partnerDistrict:'<%- data.partnerDistrict%>',partner:'<%- data.partnerId%>'})"><i
+                      onclick="editapplicationmodel({systemSize:'<%-data.systemSize%>',type:'<%- data.type %>',id:'<%- data.id %>',city:'<%- data.city%>',state:'<%- data.pinCode %>',pageType:'<%- data.pageType %>',name:'<%- data.name%>',phoneNumber:'<%- data.phoneNumber%>',notes:'<%- btoa(data.notes)%>',comment:'<%- btoa(data.comment)%>',svStatus:'<%- data.svStatus%>',pStatus:'<%- data.pStatus%>',partnerState:'<%- data.partnerState%>',partnerDistrict:'<%- data.partnerDistrict%>',partner:'<%- data.partnerId%>'})"><i
                         class="fa-solid fa-pen-to-square" style="color: #25d366;"></i></a>
                     <a class="p-2 cursor-pointer" onclick="deletemodel({id:'<%- data.id %>'})"><i
-                        class="fa-solid fa-trash" style="color: #e9562a;"></i></a></td>
+                        class="fa-solid fa-trash" style="color: #e9562a;"></i></a>
+                  </td>
                 </tr>
                 <% }) %>
             </tbody>
@@ -74,44 +75,44 @@
                 </div>
                 <div class="p-4 lg:p-6">
                   <div>
-                   
+
 
                     <div class="mb-1 lg:mb-3">
                       <div class="text-sm lg:text-base font-medium mb-1 text-left">Type</div>
                       <div>
-                        <input type="text" name="type" id="type-edit" class="textfiled" required >
+                        <input type="text" name="type" id="type-edit" class="textfiled" required>
                       </div>
                     </div>
                     <div class="mb-1 lg:mb-3">
                       <div class="text-sm lg:text-base font-medium mb-1 text-left">City
                       </div>
                       <div>
-                        <input type="text" name="selectedCity" id="city-edit" class="textfiled" required >
+                        <input type="text" name="selectedCity" id="city-edit" class="textfiled" required>
                       </div>
                     </div>
                     <div class="mb-1 lg:mb-3">
                       <div class="text-sm lg:text-base font-medium mb-1 text-left">Pincode</div>
                       <div>
-                        <input type="text" name="pinCode" id="stateSelected-edit" class="textfiled" >
+                        <input type="text" name="pinCode" id="stateSelected-edit" class="textfiled">
                       </div>
                     </div>
                     <div class="mb-1 lg:mb-3">
                       <div class="text-sm lg:text-base font-medium mb-1 text-left">Name</div>
                       <div>
-                        <input type="text" name="name" id="name-edit" class="textfiled" >
+                        <input type="text" name="name" id="name-edit" class="textfiled">
                       </div>
                     </div>
                     <div class="mb-1 lg:mb-3">
                       <div class="text-sm lg:text-base font-medium mb-1 text-left">Page Type
                       </div>
                       <div>
-                        <input type="text" name="pageType" id="pageType-edit" class="textfiled" required >
+                        <input type="text" name="pageType" id="pageType-edit" class="textfiled" required>
                       </div>
                     </div>
                     <div class="mb-1 lg:mb-3">
                       <div class="text-sm lg:text-base font-medium mb-1 text-left">Phone Number</div>
                       <div>
-                        <input type="tel" name="phoneNumber" id="phoneNumber-edit" class="textfiled" required >
+                        <input type="tel" name="phoneNumber" id="phoneNumber-edit" class="textfiled" required>
                       </div>
                     </div>
 
@@ -153,20 +154,20 @@
                       <div>
                         <select name="state" id="state" class="textfiled" onchange="toggleDistrictInput()">
                           <option value="">Select State</option>
-                          <option value="AndhraPradesh">Andhra Pradesh</option>
-                          <option value="ArunachalPradesh">Arunachal Pradesh</option>
+                          <option value="Andhra Pradesh">Andhra Pradesh</option>
+                          <option value="Arunachal Pradesh">Arunachal Pradesh</option>
                           <option value="Assam">Assam</option>
                           <option value="Bihar">Bihar</option>
                           <option value="Chhattisgarh">Chhattisgarh</option>
                           <option value="Goa">Goa</option>
                           <option value="Gujarat">Gujarat</option>
                           <option value="Haryana">Haryana</option>
-                          <option value="HimachalPradesh">Himachal Pradesh</option>
+                          <option value="Himachal Pradesh">Himachal Pradesh</option>
                           <option value="JammuKashmir">Jammu Kashmir</option>
                           <option value="Jharkhand">Jharkhand</option>
                           <option value="Karnataka">Karnataka</option>
                           <option value="Kerala">Kerala</option>
-                          <option value="MadhyaPradesh">Madhya Pradesh</option>
+                          <option value="Madhya Pradesh">Madhya Pradesh</option>
                           <option value="Maharashtra">Maharashtra</option>
                           <option value="Manipur">Manipur</option>
                           <option value="Meghalaya">Meghalaya</option>
@@ -179,12 +180,12 @@
                           <option value="TamilNadu">Tamil Nadu</option>
                           <option value="Telangana">Telangana</option>
                           <option value="Tripura">Tripura</option>
-                          <option value="UttarPradesh">Uttar Pradesh</option>
+                          <option value="Uttar Pradesh">Uttar Pradesh</option>
                           <option value="Uttarakhand">Uttarakhand</option>
                           <option value="WestBengal">West Bengal</option>
-                          <option value="AndamanNicobar">Andaman Nicobar</option>
+                          <option value="Andaman Nicobar">Andaman Nicobar</option>
                           <option value="Chandigarh">Chandigarh</option>
-                          <option value="DadraAndNagarHaveliAndDamanAndDiu">Dadra and Nagar
+                          <option value="Dadra And Nagar Haveli And Daman And Diu">Dadra and Nagar
                             Haveli and Daman and Diu</option>
                           <option value="Delhi">Delhi</option>
                           <option value="Lakshadweep">Lakshadweep</option>
@@ -198,7 +199,7 @@
                       <div class="text-sm lg:text-base font-medium mb-1 text-left">District
                       </div>
                       <div>
-                        <select name="district" id="district" class="textfiled" >
+                        <select name="district" id="district" class="textfiled">
                           <option value="">Select District</option>
 
                         </select>
@@ -209,7 +210,7 @@
                       <div class="text-sm lg:text-base font-medium mb-1 text-left">Partner
                       </div>
                       <div>
-                        <select name="partner" id="partner" class="textfiled" >
+                        <select name="partner" id="partner" class="textfiled">
                           <option value="">Select Partner</option>
 
                         </select>
@@ -222,6 +223,14 @@
                         <textarea name="notes" id="notes-edit" cols="15" rows="5" class="textfiled"></textarea>
                       </div>
                     </div>
+
+                    <div class="mb-1 lg:mb-3">
+                      <div class="text-sm lg:text-base font-medium mb-1 text-left">Comment</div>
+                      <div>
+                        <textarea name="comment" id="comment-edit" cols="15" rows="5" class="textfiled"></textarea>
+                      </div>
+                    </div>
+
 
                   </div>
                 </div>
@@ -279,9 +288,10 @@
       document.getElementById("phoneNumber-edit").value = data.phoneNumber;
       document.getElementById("state").value = data.partnerState;
       document.getElementById("notes-edit").value = atob(data.notes);
+      document.getElementById("comment-edit").value = atob(data.comment);
 
       document.getElementById("id-edit").value = data.id;
-    const distSelect=data.partnerDistrict;
+      const distSelect = data.partnerDistrict;
       const districtDropdown = document.getElementById('district');
       if (data.partnerDistrict !== '') {
         fetch(`/districts/${data.partnerState}`)
@@ -299,8 +309,8 @@
               const option = document.createElement('option');
               option.value = district;
               option.textContent = district;
-           
-              if ( district === distSelect) {
+
+              if (district === distSelect) {
                 option.selected = true;
               }
               districtDropdown.appendChild(option);
@@ -316,9 +326,9 @@
       }
 
       const partnerDropDown = document.getElementById('partner');
-      const partnerValue=data.partner;
-       
-      if(partnerValue != ""){
+      const partnerValue = data.partner;
+
+      if (partnerValue != "") {
 
         fetch(`/partner/${data.partnerState}/${distSelect}`)
           .then(response => response.json())
@@ -332,7 +342,7 @@
               const option = document.createElement('option');
               option.value = a.id;
               option.textContent = a.name;
-              if ( parseInt(a.id) === parseInt(partnerValue)) {
+              if (parseInt(a.id) === parseInt(partnerValue)) {
                 option.selected = true;
               }
               partnerDropDown.appendChild(option);
@@ -345,8 +355,8 @@
           });
 
         document.getElementById('partner-div').style.display = 'block';
-     
-      }else{
+
+      } else {
         document.getElementById('partner-div').style.display = 'none';
       }
 
@@ -464,24 +474,24 @@
     }
   </script>
 
-   <!-- Download Script -->
-   <script>
+  <!-- Download Script -->
+  <script>
     document.getElementById('downloadBtn').addEventListener('click', async () => {
-        try {
-            const tableName = 'lead_qualification';
-            if (!tableName) return;
-            const response = await fetch(`/download/${tableName}`);
-            
-            const a = document.createElement('a');
-            a.href = `https://admin.solarvipani.com/csv/${tableName}.csv`;
-            a.download = `${tableName}.csv`;
-            document.body.appendChild(a);
-            a.click();
-            window.URL.revokeObjectURL(url);
-            document.body.removeChild(a);
-        } catch (error) {
-            // console.error('Error:', error);
-        }
+      try {
+        const tableName = 'lead_qualification';
+        if (!tableName) return;
+        const response = await fetch(`/download/${tableName}`);
+
+        const a = document.createElement('a');
+        a.href = `https://admin.solarvipani.com/csv/${tableName}.csv`;
+        a.download = `${tableName}.csv`;
+        document.body.appendChild(a);
+        a.click();
+        window.URL.revokeObjectURL(url);
+        document.body.removeChild(a);
+      } catch (error) {
+        // console.error('Error:', error);
+      }
     });
   </script>
 
